--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+h1{
+  margin: auto;
+  padding-top:100px;
+  color:white;
+  text-align:center;
+}
+
+h5{
+  margin: auto;
+  padding-bottom: 20px;
+  color:white;
+  text-align:center;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +25,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
