--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,10 @@ li{
 }
 
 body {
+  height: 100%;
   text-align: center;
-  background-color: black;
+  background: rgb(2,0,36);
+  background: linear-gradient(53deg, rgba(2,0,36,1) 44%, rgba(249,233,27,1) 91%) fixed;
 }
 
 h1 {
@@ -44,40 +46,5 @@ h1 {
 
 h2{
   color: white;
-  padding-top: 30px;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding-top: 20px;
 }
