--- a/src/Sender/Sender.css
+++ b/src/Sender/Sender.css
@@ -7,12 +7,13 @@ h4 {
 }
 
 #container{
-    border: 1px solid #000000;
+    background-color: #fdf084 ;
+    border: 2px solid #fdf084 ;
     width:40%;
     height: auto;
     margin: auto;
     padding-bottom:20px;
-    box-shadow: 2px 8px 2px rgba(255, 255, 255, 0.7);
+    box-shadow: 2px 2px 10px rgba(255, 255, 255, 0.8);
     border-radius: 8px;
 }
 
